Using {base} for image source paths

--- a/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
+++ b/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.Dx1ymAnz.js",
+    "file": "_app/immutable/entry/app.CGPmaplP.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -25,7 +25,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.ClUXlZ9M.js",
+    "file": "_app/immutable/nodes/0.oaIfD8KI.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
       "_DuKA917J.js",
       "_DYACF6Ii.js",
       "_D5Elu2hf.js",
-      "_CZzV8zSD.js"
+      "_CiOQUtVp.js"
     ],
     "css": [
       "_app/immutable/assets/0.BdpqRjtK.css",
@@ -46,7 +46,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.D94lmr6G.js",
+    "file": "_app/immutable/nodes/1.DeI3PtRY.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -57,7 +57,7 @@
       "_DN-Y5FX1.js",
       "_B0ugiPo6.js",
       "_DYACF6Ii.js",
-      "_CZzV8zSD.js"
+      "_CiOQUtVp.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -115,7 +115,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.QN5wnDcH.js",
+    "file": "_app/immutable/nodes/6.Cv1NmRn7.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -130,7 +130,7 @@
       "_DYACF6Ii.js",
       "_B3K-TgRg.js",
       "_D5Elu2hf.js",
-      "_CZzV8zSD.js",
+      "_CiOQUtVp.js",
       "_DeJ2Ftms.js"
     ],
     "css": [
@@ -138,7 +138,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.CRUoHL6a.js",
+    "file": "_app/immutable/nodes/7.DuAvdH8o.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
@@ -152,7 +152,7 @@
       "_COAFtsAM.js",
       "_DYACF6Ii.js",
       "_D5Elu2hf.js",
-      "_CZzV8zSD.js",
+      "_CiOQUtVp.js",
       "_DeJ2Ftms.js"
     ]
   },
@@ -200,8 +200,8 @@
       "_DN-Y5FX1.js"
     ]
   },
-  "_CZzV8zSD.js": {
-    "file": "_app/immutable/chunks/CZzV8zSD.js",
+  "_CiOQUtVp.js": {
+    "file": "_app/immutable/chunks/CiOQUtVp.js",
     "name": "entry",
     "imports": [
       "_B0ugiPo6.js",
@@ -257,12 +257,12 @@
     "src": "_app.B6o2F3Li.css"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.HBOPqhsF.js",
+    "file": "_app/immutable/entry/start.D-j50wLN.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CZzV8zSD.js"
+      "_CiOQUtVp.js"
     ]
   }
 }
