--- a/hebrews-coffee-site/.svelte-kit/output/server/.vite/manifest.json
+++ b/hebrews-coffee-site/.svelte-kit/output/server/.vite/manifest.json
@@ -105,6 +105,12 @@
       "_shared.js"
     ]
   },
+  "src/routes/+layout.js": {
+    "file": "entries/pages/_layout.js",
+    "name": "entries/pages/_layout",
+    "src": "src/routes/+layout.js",
+    "isEntry": true
+  },
   "src/routes/+layout.svelte": {
     "file": "entries/pages/_layout.svelte.js",
     "name": "entries/pages/_layout.svelte",
