--- a/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
+++ b/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
@@ -1,16 +1,16 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CGPmaplP.js",
+    "file": "_app/immutable/entry/app.D4XaPhHc.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_DN-Y5FX1.js",
-      "_B0ugiPo6.js",
+      "_4tRy_9DW.js",
+      "_mZYaVlXh.js",
       "_DsnmJJEf.js",
-      "_D5Qwt-z6.js",
-      "_DuKA917J.js",
-      "_B3K-TgRg.js"
+      "_YaMAKQ02.js",
+      "_ihxhlco1.js",
+      "_BvnH6WBI.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -25,244 +25,254 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.oaIfD8KI.js",
+    "file": "_app/immutable/nodes/0.D9VCZPon.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js",
-      "_DuKA917J.js",
-      "_DYACF6Ii.js",
-      "_D5Elu2hf.js",
-      "_CiOQUtVp.js"
+      "_0z1sJvhk.js",
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js",
+      "_Zq5Smagp.js",
+      "_ihxhlco1.js",
+      "_C3qje7M7.js",
+      "_GZJ2z3rj.js",
+      "_D-Lfi2MX.js"
     ],
     "css": [
       "_app/immutable/assets/0.BdpqRjtK.css",
-      "_app/immutable/assets/app.B6o2F3Li.css"
+      "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DeI3PtRY.js",
+    "file": "_app/immutable/nodes/1.o6zn9Dl-.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_DN-Y5FX1.js",
-      "_B0ugiPo6.js",
-      "_DYACF6Ii.js",
-      "_CiOQUtVp.js"
+      "_0z1sJvhk.js",
+      "_4tRy_9DW.js",
+      "_mZYaVlXh.js",
+      "_C3qje7M7.js",
+      "_D-Lfi2MX.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.BfBZfjbB.js",
+    "file": "_app/immutable/nodes/2.CxTD5V3A.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_DN-Y5FX1.js"
+      "_0z1sJvhk.js",
+      "_4tRy_9DW.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.CRwc5MZK.js",
+    "file": "_app/immutable/nodes/3.BMhelQnB.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_DN-Y5FX1.js"
+      "_0z1sJvhk.js",
+      "_4tRy_9DW.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.crjRuXoj.js",
+    "file": "_app/immutable/nodes/4.K_ZtKZfB.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_DN-Y5FX1.js"
+      "_0z1sJvhk.js",
+      "_4tRy_9DW.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.hzqAw8Z4.js",
+    "file": "_app/immutable/nodes/5.Vq3Hpini.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js",
-      "_DYACF6Ii.js",
-      "_DeJ2Ftms.js"
+      "_0z1sJvhk.js",
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js",
+      "_C3qje7M7.js",
+      "_Cg3IBsHc.js"
     ],
     "css": [
-      "_app/immutable/assets/app.B6o2F3Li.css"
+      "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.Cv1NmRn7.js",
+    "file": "_app/immutable/nodes/6.D9AwOKTL.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js",
-      "_D5Qwt-z6.js",
-      "_COAFtsAM.js",
-      "_DYACF6Ii.js",
-      "_B3K-TgRg.js",
-      "_D5Elu2hf.js",
-      "_CiOQUtVp.js",
-      "_DeJ2Ftms.js"
+      "_0z1sJvhk.js",
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js",
+      "_YaMAKQ02.js",
+      "_C2I-YAI4.js",
+      "_Zq5Smagp.js",
+      "_C3qje7M7.js",
+      "_BvnH6WBI.js",
+      "_GZJ2z3rj.js",
+      "_D-Lfi2MX.js",
+      "_Cg3IBsHc.js"
     ],
     "css": [
-      "_app/immutable/assets/app.B6o2F3Li.css"
+      "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.DuAvdH8o.js",
+    "file": "_app/immutable/nodes/7.C9LCTM75.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js",
-      "_D5Qwt-z6.js",
-      "_COAFtsAM.js",
-      "_DYACF6Ii.js",
-      "_D5Elu2hf.js",
-      "_CiOQUtVp.js",
-      "_DeJ2Ftms.js"
+      "_0z1sJvhk.js",
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js",
+      "_YaMAKQ02.js",
+      "_C2I-YAI4.js",
+      "_Zq5Smagp.js",
+      "_C3qje7M7.js",
+      "_GZJ2z3rj.js",
+      "_D-Lfi2MX.js",
+      "_Cg3IBsHc.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8.BMT_CihK.js",
+    "file": "_app/immutable/nodes/8.DzyUx1np.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_B298ACMR.js",
-      "_DN-Y5FX1.js"
+      "_0z1sJvhk.js",
+      "_4tRy_9DW.js"
     ],
     "css": [
-      "_app/immutable/assets/app.B6o2F3Li.css"
+      "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
-  "_B0ugiPo6.js": {
-    "file": "_app/immutable/chunks/B0ugiPo6.js",
-    "name": "index-client",
-    "imports": [
-      "_DN-Y5FX1.js"
-    ]
-  },
-  "_B298ACMR.js": {
-    "file": "_app/immutable/chunks/B298ACMR.js",
+  "_0z1sJvhk.js": {
+    "file": "_app/immutable/chunks/0z1sJvhk.js",
     "name": "legacy",
     "imports": [
-      "_DN-Y5FX1.js"
+      "_4tRy_9DW.js"
     ]
   },
-  "_B3K-TgRg.js": {
-    "file": "_app/immutable/chunks/B3K-TgRg.js",
-    "name": "props",
-    "imports": [
-      "_DN-Y5FX1.js",
-      "_D5Elu2hf.js"
-    ]
-  },
-  "_COAFtsAM.js": {
-    "file": "_app/immutable/chunks/COAFtsAM.js",
-    "name": "helpers",
-    "imports": [
-      "_DN-Y5FX1.js"
-    ]
-  },
-  "_CiOQUtVp.js": {
-    "file": "_app/immutable/chunks/CiOQUtVp.js",
-    "name": "entry",
-    "imports": [
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js"
-    ]
-  },
-  "_D5Elu2hf.js": {
-    "file": "_app/immutable/chunks/D5Elu2hf.js",
-    "name": "store",
-    "imports": [
-      "_B0ugiPo6.js",
-      "_DN-Y5FX1.js"
-    ]
-  },
-  "_D5Qwt-z6.js": {
-    "file": "_app/immutable/chunks/D5Qwt-z6.js",
-    "name": "if",
-    "imports": [
-      "_DN-Y5FX1.js"
-    ]
-  },
-  "_DN-Y5FX1.js": {
-    "file": "_app/immutable/chunks/DN-Y5FX1.js",
+  "_4tRy_9DW.js": {
+    "file": "_app/immutable/chunks/4tRy_9DW.js",
     "name": "template"
   },
-  "_DYACF6Ii.js": {
-    "file": "_app/immutable/chunks/DYACF6Ii.js",
-    "name": "lifecycle",
+  "_BvnH6WBI.js": {
+    "file": "_app/immutable/chunks/BvnH6WBI.js",
+    "name": "props",
     "imports": [
-      "_DN-Y5FX1.js"
+      "_4tRy_9DW.js",
+      "_GZJ2z3rj.js"
     ]
   },
-  "_DeJ2Ftms.js": {
-    "file": "_app/immutable/chunks/DeJ2Ftms.js",
+  "_C2I-YAI4.js": {
+    "file": "_app/immutable/chunks/C2I-YAI4.js",
+    "name": "helpers",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
+  },
+  "_C3qje7M7.js": {
+    "file": "_app/immutable/chunks/C3qje7M7.js",
+    "name": "lifecycle",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
+  },
+  "_Cg3IBsHc.js": {
+    "file": "_app/immutable/chunks/Cg3IBsHc.js",
     "name": "storedOrder",
     "imports": [
-      "_B0ugiPo6.js"
+      "_mZYaVlXh.js"
+    ]
+  },
+  "_D-Lfi2MX.js": {
+    "file": "_app/immutable/chunks/D-Lfi2MX.js",
+    "name": "entry",
+    "imports": [
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js"
     ]
   },
   "_DsnmJJEf.js": {
     "file": "_app/immutable/chunks/DsnmJJEf.js",
     "name": "disclose-version"
   },
-  "_DuKA917J.js": {
-    "file": "_app/immutable/chunks/DuKA917J.js",
-    "name": "this",
+  "_GZJ2z3rj.js": {
+    "file": "_app/immutable/chunks/GZJ2z3rj.js",
+    "name": "store",
     "imports": [
-      "_DN-Y5FX1.js"
+      "_mZYaVlXh.js",
+      "_4tRy_9DW.js"
     ]
   },
-  "_app.B6o2F3Li.css": {
-    "file": "_app/immutable/assets/app.B6o2F3Li.css",
-    "src": "_app.B6o2F3Li.css"
+  "_YaMAKQ02.js": {
+    "file": "_app/immutable/chunks/YaMAKQ02.js",
+    "name": "if",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
+  },
+  "_Zq5Smagp.js": {
+    "file": "_app/immutable/chunks/Zq5Smagp.js",
+    "name": "attributes",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
+  },
+  "_app.Db6sXKQR.css": {
+    "file": "_app/immutable/assets/app.Db6sXKQR.css",
+    "src": "_app.Db6sXKQR.css"
+  },
+  "_ihxhlco1.js": {
+    "file": "_app/immutable/chunks/ihxhlco1.js",
+    "name": "this",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
+  },
+  "_mZYaVlXh.js": {
+    "file": "_app/immutable/chunks/mZYaVlXh.js",
+    "name": "index-client",
+    "imports": [
+      "_4tRy_9DW.js"
+    ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.D-j50wLN.js",
+    "file": "_app/immutable/entry/start.C5QvC3Uf.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CiOQUtVp.js"
+      "_D-Lfi2MX.js"
     ]
   }
 }
