Commit automated files

--- a/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
+++ b/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
@@ -1,16 +1,16 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.D4XaPhHc.js",
+    "file": "_app/immutable/entry/app.2IWTkbVt.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_4tRy_9DW.js",
-      "_mZYaVlXh.js",
+      "_D7JtEr4O.js",
+      "_B3Yr4pq7.js",
       "_DsnmJJEf.js",
-      "_YaMAKQ02.js",
-      "_ihxhlco1.js",
-      "_BvnH6WBI.js"
+      "_BKURqBGS.js",
+      "_Dkbn17K0.js",
+      "_DgrQxfD2.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -25,21 +25,22 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.D9VCZPon.js",
+    "file": "_app/immutable/nodes/0.CIjE-wOD.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js",
-      "_Zq5Smagp.js",
-      "_ihxhlco1.js",
-      "_C3qje7M7.js",
-      "_GZJ2z3rj.js",
-      "_D-Lfi2MX.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_Dkbn17K0.js",
+      "_CH9_Thn8.js",
+      "_B8zlTyjN.js",
+      "_r3tN5Qs3.js",
+      "_Cw4pzU6C.js"
     ],
     "css": [
       "_app/immutable/assets/0.BdpqRjtK.css",
@@ -47,232 +48,245 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.o6zn9Dl-.js",
+    "file": "_app/immutable/nodes/1.C6Zi10-F.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_4tRy_9DW.js",
-      "_mZYaVlXh.js",
-      "_C3qje7M7.js",
-      "_D-Lfi2MX.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_B3Yr4pq7.js",
+      "_CH9_Thn8.js",
+      "_r3tN5Qs3.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.CxTD5V3A.js",
+    "file": "_app/immutable/nodes/2.BFTmKe14.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_4tRy_9DW.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_Cw4pzU6C.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.BMhelQnB.js",
+    "file": "_app/immutable/nodes/3.Bc9G_gDo.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_4tRy_9DW.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.K_ZtKZfB.js",
+    "file": "_app/immutable/nodes/4.koyHebTT.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_4tRy_9DW.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.Vq3Hpini.js",
+    "file": "_app/immutable/nodes/5.BdTmdRo_.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js",
-      "_C3qje7M7.js",
-      "_Cg3IBsHc.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_CmkYJTsV.js",
+      "_Cw4pzU6C.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.D9AwOKTL.js",
+    "file": "_app/immutable/nodes/6.t18oi3qM.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js",
-      "_YaMAKQ02.js",
-      "_C2I-YAI4.js",
-      "_Zq5Smagp.js",
-      "_C3qje7M7.js",
-      "_BvnH6WBI.js",
-      "_GZJ2z3rj.js",
-      "_D-Lfi2MX.js",
-      "_Cg3IBsHc.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_BKURqBGS.js",
+      "_DoaI9ZX2.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_DgrQxfD2.js",
+      "_B8zlTyjN.js",
+      "_r3tN5Qs3.js",
+      "_Cw4pzU6C.js",
+      "_CmkYJTsV.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.C9LCTM75.js",
+    "file": "_app/immutable/nodes/7.Dv_2nsZg.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js",
-      "_YaMAKQ02.js",
-      "_C2I-YAI4.js",
-      "_Zq5Smagp.js",
-      "_C3qje7M7.js",
-      "_GZJ2z3rj.js",
-      "_D-Lfi2MX.js",
-      "_Cg3IBsHc.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_BKURqBGS.js",
+      "_DoaI9ZX2.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_B8zlTyjN.js",
+      "_r3tN5Qs3.js",
+      "_CmkYJTsV.js",
+      "_Cw4pzU6C.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8.DzyUx1np.js",
+    "file": "_app/immutable/nodes/8.DAOKvW2D.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_0z1sJvhk.js",
-      "_4tRy_9DW.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_Cw4pzU6C.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
-  "_0z1sJvhk.js": {
-    "file": "_app/immutable/chunks/0z1sJvhk.js",
-    "name": "legacy",
+  "_A4WjF5gX.js": {
+    "file": "_app/immutable/chunks/A4WjF5gX.js",
+    "name": "attributes",
     "imports": [
-      "_4tRy_9DW.js"
+      "_D7JtEr4O.js"
     ]
   },
-  "_4tRy_9DW.js": {
-    "file": "_app/immutable/chunks/4tRy_9DW.js",
-    "name": "template"
-  },
-  "_BvnH6WBI.js": {
-    "file": "_app/immutable/chunks/BvnH6WBI.js",
-    "name": "props",
+  "_B3Yr4pq7.js": {
+    "file": "_app/immutable/chunks/B3Yr4pq7.js",
+    "name": "index-client",
     "imports": [
-      "_4tRy_9DW.js",
-      "_GZJ2z3rj.js"
+      "_D7JtEr4O.js"
     ]
   },
-  "_C2I-YAI4.js": {
-    "file": "_app/immutable/chunks/C2I-YAI4.js",
-    "name": "helpers",
+  "_B8zlTyjN.js": {
+    "file": "_app/immutable/chunks/B8zlTyjN.js",
+    "name": "store",
     "imports": [
-      "_4tRy_9DW.js"
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js"
     ]
   },
-  "_C3qje7M7.js": {
-    "file": "_app/immutable/chunks/C3qje7M7.js",
+  "_BKURqBGS.js": {
+    "file": "_app/immutable/chunks/BKURqBGS.js",
+    "name": "if",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_CH9_Thn8.js": {
+    "file": "_app/immutable/chunks/CH9_Thn8.js",
     "name": "lifecycle",
     "imports": [
-      "_4tRy_9DW.js"
+      "_D7JtEr4O.js"
     ]
   },
-  "_Cg3IBsHc.js": {
-    "file": "_app/immutable/chunks/Cg3IBsHc.js",
+  "_CmkYJTsV.js": {
+    "file": "_app/immutable/chunks/CmkYJTsV.js",
     "name": "storedOrder",
     "imports": [
-      "_mZYaVlXh.js"
+      "_B3Yr4pq7.js"
     ]
   },
-  "_D-Lfi2MX.js": {
-    "file": "_app/immutable/chunks/D-Lfi2MX.js",
-    "name": "entry",
+  "_Cw4pzU6C.js": {
+    "file": "_app/immutable/chunks/Cw4pzU6C.js",
+    "name": "paths"
+  },
+  "_D7JtEr4O.js": {
+    "file": "_app/immutable/chunks/D7JtEr4O.js",
+    "name": "template"
+  },
+  "_DgrQxfD2.js": {
+    "file": "_app/immutable/chunks/DgrQxfD2.js",
+    "name": "props",
     "imports": [
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js"
+      "_D7JtEr4O.js",
+      "_B8zlTyjN.js"
+    ]
+  },
+  "_Dkbn17K0.js": {
+    "file": "_app/immutable/chunks/Dkbn17K0.js",
+    "name": "this",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_DoaI9ZX2.js": {
+    "file": "_app/immutable/chunks/DoaI9ZX2.js",
+    "name": "helpers",
+    "imports": [
+      "_D7JtEr4O.js"
     ]
   },
   "_DsnmJJEf.js": {
     "file": "_app/immutable/chunks/DsnmJJEf.js",
     "name": "disclose-version"
   },
-  "_GZJ2z3rj.js": {
-    "file": "_app/immutable/chunks/GZJ2z3rj.js",
-    "name": "store",
-    "imports": [
-      "_mZYaVlXh.js",
-      "_4tRy_9DW.js"
-    ]
-  },
-  "_YaMAKQ02.js": {
-    "file": "_app/immutable/chunks/YaMAKQ02.js",
-    "name": "if",
-    "imports": [
-      "_4tRy_9DW.js"
-    ]
-  },
-  "_Zq5Smagp.js": {
-    "file": "_app/immutable/chunks/Zq5Smagp.js",
-    "name": "attributes",
-    "imports": [
-      "_4tRy_9DW.js"
-    ]
-  },
   "_app.Db6sXKQR.css": {
     "file": "_app/immutable/assets/app.Db6sXKQR.css",
     "src": "_app.Db6sXKQR.css"
   },
-  "_ihxhlco1.js": {
-    "file": "_app/immutable/chunks/ihxhlco1.js",
-    "name": "this",
+  "_pDtgKXZk.js": {
+    "file": "_app/immutable/chunks/pDtgKXZk.js",
+    "name": "legacy",
     "imports": [
-      "_4tRy_9DW.js"
+      "_D7JtEr4O.js"
     ]
   },
-  "_mZYaVlXh.js": {
-    "file": "_app/immutable/chunks/mZYaVlXh.js",
-    "name": "index-client",
+  "_r3tN5Qs3.js": {
+    "file": "_app/immutable/chunks/r3tN5Qs3.js",
+    "name": "entry",
     "imports": [
-      "_4tRy_9DW.js"
+      "_B3Yr4pq7.js",
+      "_Cw4pzU6C.js",
+      "_D7JtEr4O.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.C5QvC3Uf.js",
+    "file": "_app/immutable/entry/start.BPe0jLB7.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D-Lfi2MX.js"
+      "_r3tN5Qs3.js"
     ]
   }
 }
