--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,13 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-        working-directory: ./backend
+        working-directory: ./hebrews-coffee-site
 
       - name: Build
         env:
           NODE_ENV: production
         run: npm run build
-        working-directory: ./backend
+        working-directory: ./hebrews-coffee-site
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -43,7 +43,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./backend/build
+          path: './build'
 
   deploy:
     environment:
