Sync auto-generated files

--- a/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
+++ b/hebrews-coffee-site/.svelte-kit/output/client/.vite/manifest.json
@@ -1,16 +1,16 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CoxfXQwS.js",
+    "file": "_app/immutable/entry/app.Cnb9nvdr.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_CednUaVI.js",
-      "_B9VogUKh.js",
+      "_D7JtEr4O.js",
+      "_B3Yr4pq7.js",
       "_DsnmJJEf.js",
-      "_nEk7PoAX.js",
-      "_BZmv0-94.js",
-      "_BqfYsc1i.js"
+      "_BKURqBGS.js",
+      "_Dkbn17K0.js",
+      "_DgrQxfD2.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -25,22 +25,22 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.D7iLj31E.js",
+    "file": "_app/immutable/nodes/0.8mLTUJw6.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_B9VogUKh.js",
-      "_CednUaVI.js",
-      "_DoY-lUry.js",
-      "_BZmv0-94.js",
-      "_u60f9ghS.js",
-      "_DS5nTQr6.js",
-      "_Dy2a0Pub.js",
-      "_CFuzEx9C.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_Dkbn17K0.js",
+      "_CH9_Thn8.js",
+      "_B8zlTyjN.js",
+      "_BbHf168v.js",
+      "_DS9ZxsbQ.js"
     ],
     "css": [
       "_app/immutable/assets/0.BdpqRjtK.css",
@@ -48,245 +48,245 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DMxdSEoQ.js",
+    "file": "_app/immutable/nodes/1.BZkfiI3A.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_CednUaVI.js",
-      "_B9VogUKh.js",
-      "_u60f9ghS.js",
-      "_Dy2a0Pub.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_B3Yr4pq7.js",
+      "_CH9_Thn8.js",
+      "_BbHf168v.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.BFRQWdnf.js",
+    "file": "_app/immutable/nodes/2.Dj66H02m.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_CednUaVI.js",
-      "_DoY-lUry.js",
-      "_CFuzEx9C.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_DS9ZxsbQ.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.BWDaUz6a.js",
+    "file": "_app/immutable/nodes/3.Bc9G_gDo.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_CednUaVI.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.BYUcySGM.js",
+    "file": "_app/immutable/nodes/4.koyHebTT.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_CednUaVI.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.DNaZI0-D.js",
+    "file": "_app/immutable/nodes/5.CtNgKlAq.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_B9VogUKh.js",
-      "_CednUaVI.js",
-      "_DoY-lUry.js",
-      "_u60f9ghS.js",
-      "_hG6q-ZLG.js",
-      "_CFuzEx9C.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_CmkYJTsV.js",
+      "_DS9ZxsbQ.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.DuNK8gbY.js",
+    "file": "_app/immutable/nodes/6.wswuPebz.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_B9VogUKh.js",
-      "_CednUaVI.js",
-      "_nEk7PoAX.js",
-      "_BhEDDVpo.js",
-      "_DoY-lUry.js",
-      "_u60f9ghS.js",
-      "_BqfYsc1i.js",
-      "_DS5nTQr6.js",
-      "_Dy2a0Pub.js",
-      "_CFuzEx9C.js",
-      "_hG6q-ZLG.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_BKURqBGS.js",
+      "_DoaI9ZX2.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_DgrQxfD2.js",
+      "_B8zlTyjN.js",
+      "_BbHf168v.js",
+      "_DS9ZxsbQ.js",
+      "_CmkYJTsV.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.6RPVHC2m.js",
+    "file": "_app/immutable/nodes/7.BWYtfCnQ.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_B9VogUKh.js",
-      "_CednUaVI.js",
-      "_nEk7PoAX.js",
-      "_BhEDDVpo.js",
-      "_DoY-lUry.js",
-      "_u60f9ghS.js",
-      "_DS5nTQr6.js",
-      "_Dy2a0Pub.js",
-      "_hG6q-ZLG.js",
-      "_CFuzEx9C.js"
+      "_pDtgKXZk.js",
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js",
+      "_BKURqBGS.js",
+      "_DoaI9ZX2.js",
+      "_A4WjF5gX.js",
+      "_CH9_Thn8.js",
+      "_B8zlTyjN.js",
+      "_BbHf168v.js",
+      "_CmkYJTsV.js",
+      "_DS9ZxsbQ.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8.BU9cwK-_.js",
+    "file": "_app/immutable/nodes/8.Caxp4eJ8.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_DsnmJJEf.js",
-      "_32AgLyXw.js",
-      "_CednUaVI.js",
-      "_DoY-lUry.js",
-      "_CFuzEx9C.js"
+      "_pDtgKXZk.js",
+      "_D7JtEr4O.js",
+      "_A4WjF5gX.js",
+      "_DS9ZxsbQ.js"
     ],
     "css": [
       "_app/immutable/assets/app.Db6sXKQR.css"
     ]
   },
-  "_32AgLyXw.js": {
-    "file": "_app/immutable/chunks/32AgLyXw.js",
-    "name": "legacy",
-    "imports": [
-      "_CednUaVI.js"
-    ]
-  },
-  "_B9VogUKh.js": {
-    "file": "_app/immutable/chunks/B9VogUKh.js",
-    "name": "index-client",
-    "imports": [
-      "_CednUaVI.js"
-    ]
-  },
-  "_BZmv0-94.js": {
-    "file": "_app/immutable/chunks/BZmv0-94.js",
-    "name": "this",
-    "imports": [
-      "_CednUaVI.js"
-    ]
-  },
-  "_BhEDDVpo.js": {
-    "file": "_app/immutable/chunks/BhEDDVpo.js",
-    "name": "helpers",
-    "imports": [
-      "_CednUaVI.js"
-    ]
-  },
-  "_BqfYsc1i.js": {
-    "file": "_app/immutable/chunks/BqfYsc1i.js",
-    "name": "props",
-    "imports": [
-      "_CednUaVI.js",
-      "_DS5nTQr6.js"
-    ]
-  },
-  "_CFuzEx9C.js": {
-    "file": "_app/immutable/chunks/CFuzEx9C.js",
-    "name": "paths"
-  },
-  "_CednUaVI.js": {
-    "file": "_app/immutable/chunks/CednUaVI.js",
-    "name": "template"
-  },
-  "_DS5nTQr6.js": {
-    "file": "_app/immutable/chunks/DS5nTQr6.js",
-    "name": "store",
-    "imports": [
-      "_B9VogUKh.js",
-      "_CednUaVI.js"
-    ]
-  },
-  "_DoY-lUry.js": {
-    "file": "_app/immutable/chunks/DoY-lUry.js",
+  "_A4WjF5gX.js": {
+    "file": "_app/immutable/chunks/A4WjF5gX.js",
     "name": "attributes",
     "imports": [
-      "_CednUaVI.js"
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_B3Yr4pq7.js": {
+    "file": "_app/immutable/chunks/B3Yr4pq7.js",
+    "name": "index-client",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_B8zlTyjN.js": {
+    "file": "_app/immutable/chunks/B8zlTyjN.js",
+    "name": "store",
+    "imports": [
+      "_B3Yr4pq7.js",
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_BKURqBGS.js": {
+    "file": "_app/immutable/chunks/BKURqBGS.js",
+    "name": "if",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_BbHf168v.js": {
+    "file": "_app/immutable/chunks/BbHf168v.js",
+    "name": "entry",
+    "imports": [
+      "_B3Yr4pq7.js",
+      "_DS9ZxsbQ.js",
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_CH9_Thn8.js": {
+    "file": "_app/immutable/chunks/CH9_Thn8.js",
+    "name": "lifecycle",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_CmkYJTsV.js": {
+    "file": "_app/immutable/chunks/CmkYJTsV.js",
+    "name": "storedOrder",
+    "imports": [
+      "_B3Yr4pq7.js"
+    ]
+  },
+  "_D7JtEr4O.js": {
+    "file": "_app/immutable/chunks/D7JtEr4O.js",
+    "name": "template"
+  },
+  "_DS9ZxsbQ.js": {
+    "file": "_app/immutable/chunks/DS9ZxsbQ.js",
+    "name": "paths"
+  },
+  "_DgrQxfD2.js": {
+    "file": "_app/immutable/chunks/DgrQxfD2.js",
+    "name": "props",
+    "imports": [
+      "_D7JtEr4O.js",
+      "_B8zlTyjN.js"
+    ]
+  },
+  "_Dkbn17K0.js": {
+    "file": "_app/immutable/chunks/Dkbn17K0.js",
+    "name": "this",
+    "imports": [
+      "_D7JtEr4O.js"
+    ]
+  },
+  "_DoaI9ZX2.js": {
+    "file": "_app/immutable/chunks/DoaI9ZX2.js",
+    "name": "helpers",
+    "imports": [
+      "_D7JtEr4O.js"
     ]
   },
   "_DsnmJJEf.js": {
     "file": "_app/immutable/chunks/DsnmJJEf.js",
     "name": "disclose-version"
   },
-  "_Dy2a0Pub.js": {
-    "file": "_app/immutable/chunks/Dy2a0Pub.js",
-    "name": "entry",
-    "imports": [
-      "_B9VogUKh.js",
-      "_CFuzEx9C.js",
-      "_CednUaVI.js"
-    ]
-  },
   "_app.Db6sXKQR.css": {
     "file": "_app/immutable/assets/app.Db6sXKQR.css",
     "src": "_app.Db6sXKQR.css"
   },
-  "_hG6q-ZLG.js": {
-    "file": "_app/immutable/chunks/hG6q-ZLG.js",
-    "name": "storedOrder",
+  "_pDtgKXZk.js": {
+    "file": "_app/immutable/chunks/pDtgKXZk.js",
+    "name": "legacy",
     "imports": [
-      "_B9VogUKh.js"
-    ]
-  },
-  "_nEk7PoAX.js": {
-    "file": "_app/immutable/chunks/nEk7PoAX.js",
-    "name": "if",
-    "imports": [
-      "_CednUaVI.js"
-    ]
-  },
-  "_u60f9ghS.js": {
-    "file": "_app/immutable/chunks/u60f9ghS.js",
-    "name": "lifecycle",
-    "imports": [
-      "_CednUaVI.js"
+      "_D7JtEr4O.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BQ9tTUHI.js",
+    "file": "_app/immutable/entry/start.CHkxe2DN.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_Dy2a0Pub.js"
+      "_BbHf168v.js"
     ]
   }
 }
